--- a/idea-gosu-plugin/src/main/java/inspectionDescriptions/GosuWildCardInspection.html
+++ b/idea-gosu-plugin/src/main/java/inspectionDescriptions/GosuWildCardInspection.html
@@ -5,9 +5,9 @@ Upgrade Gosu code that uses Java-like wildcards. <br>
 <br>Gosu allowed you to use Java-like wildcards in a type argument in a generic type instance but it never
 supported them at the semantic level. It was just syntactic sugar as shown by the following transformations:
 <ul>
-    <li>from List&lt;?&gt; to List&lt;Object&gt;>
-    <li>from List&lt;? extends T&gt; to List&lt;T&gt;>
-    <li>from List&lt;? super T&gt; to List&lt;Object&gt;>
+    <li>from List&lt;?&gt; to List&lt;Object&gt;
+    <li>from List&lt;? extends T&gt; to List&lt;T&gt;
+    <li>from List&lt;? super T&gt; to List&lt;Object&gt;
 </ul>
 
 This inspection allows you to upgrade your code so that it will continue to behave as before by doing the above replacements.
